--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
 
         <link rel="icon" type="image/png" href="images/favicon.png" sizes="256x256">
         <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700|Jacques+Francois' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" media="all" href="fonts/odstemplik/stylesheet.css">
         <link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
 		<title>Katie M. K. Blaede</title>
 	</head>
 
 	<body>
-
+		<header class="main">
+			<h1>Katie M. K. Blaede</h1>
+			<h2>Illustration &amp; Design</h2>
+		</header>
+		<hr />
+		<nav class="main">
+			<a href="#">Portfolio</a>
+			<a href="#">About</a>
+			<a href="#">Contact</a>
+			<a href="#">Blog</a>
+		</nav>
 	</body>
 </html>
