Add Irish Blessing thumb to portfolio page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</nav>
 		<div class="grid">
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/irish-blessing.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="http://placehold.it/400x247" />
