Pull in CNAME and .gitignore

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 			<h1><a href="index.html">Katie M. K. Blaede</a></h1>
 			<h2>Illustration &amp; Design</h2>
 		</header>
-		<!--hr /-->
+		<hr />
 		<nav class="main">
-			<!--a href="#">Portfolio</a>
+			<a href="#">Portfolio</a>
 			<a href="#">About</a>
 			<a href="#">Contact</a>
-			<a href="#">Blog</a-->
-		    <p>Website coming soon.</p>
+			<a href="#">Blog</a>
 		</nav>
-		<!--div class="grid">
+		<div class="grid">
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/irish-blessing.png" />
 			</a>
@@ -66,6 +65,6 @@
 			<a href="#" class="whole smablet-half large-third">
 				<img src="http://placehold.it/400x247" />
 			</a>
-		</div-->
+		</div>
 	</body>
 </html>
