new design and background image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="#">Portfolio</a>
 			<a href="#">About</a>
 			<a href="#">Contact</a>
-			<a href="#">Blog</a>
+			<a href="http://maffity.tumblr.com">Blog</a>
 		</nav>
 		<div class="grid">
 			<a href="#" class="whole smablet-half large-third">
