Add bg to CSS, drop in thumbs as placeholders

--- a/index.html
+++ b/index.html
@@ -33,37 +33,25 @@
 				<img src="images/thumbnails/irish-blessing.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/disney.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/emma-and-ben-save-the-dates.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/keebly.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/odad.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/recipe-cards.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/wedding-invitation-suite.png" />
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
-			</a>
-			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
-			</a>
-			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
-			</a>
-			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
-			</a>
-			<a href="#" class="whole smablet-half large-third">
-				<img src="http://placehold.it/400x247" />
+				<img src="images/thumbnails/wedding-website.png" />
 			</a>
 		</div>
 	</body>
