--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/png" href="images/favicon.png" sizes="256x256">
         <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700|Jacques+Francois' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" media="all" href="fonts/odstemplik/stylesheet.css">
-        <link rel="stylesheet" type="text/css" media="all" href="styles/grid.css">
+        <link rel="stylesheet" type="text/css" media="all" href="http://cassidyjames.com/grid.css/grid.css">
 		<link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
 		<title>Katie M. K. Blaede</title>
 	</head>
