Change nav links to match design

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 		<nav class="main">
 			<a href="#">Portfolio</a>
 			<a href="#">About</a>
-			<a href="#">Contact</a>
-			<a href="http://maffity.tumblr.com">Blog</a>
+			<a href="#">Shop</a>
 		</nav>
 		<div class="grid">
 			<a href="#" class="whole smablet-half large-third">
