Change subtitle to match design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<header class="main">
 			<h1><a href="index.html">Katie M. K. Blaede</a></h1>
-			<h2>Illustration &amp; Design</h2>
+			<h2>Design &amp; Illustration</h2>
 		</header>
 		<hr />
 		<nav class="main">
