CSS cleanup, add titles for thumbs

--- a/index.html
+++ b/index.html
@@ -27,30 +27,38 @@
 			<a href="#">About</a>
 			<a href="#">Shop</a>
 		</nav>
-		<div class="grid">
+		<div class="grid thumbs">
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/irish-blessing.png" />
+				<span>Irish Blessing</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/disney.png" />
+				<span>Disney series</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/emma-and-ben-save-the-dates.png" />
+				<span>Save the Dates for Emma &amp; Ben</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/keebly.png" />
+				<span>Keebly Creations</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/odad.png" />
+				<span>Odad</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/recipe-cards.png" />
+				<span>Recipe Cards</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/wedding-invitation-suite.png" />
+				<span>Wedding Invitations Suite</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
 				<img src="images/thumbnails/wedding-website.png" />
+				<span>Wedding Website</span>
 			</a>
 		</div>
 	</body>
