--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<meta name="theme-color" content="#9FDDBD">
 
 		<link rel="icon" type="image/png" href="images/favicon.png" sizes="256x256">
-		<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700|Jacques+Francois' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" media="all" href="fonts/odstemplik/stylesheet.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" media="all" href="http://cassidyjames.com/grid.css/grid.css">
 		<link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
 		<title>Katie M. K. Blaede</title>
@@ -20,6 +19,7 @@
 		<header class="main">
 			<h1><a href="index.html">Katie M. K. Blaede</a></h1>
 			<h2>Design &amp; Illustration</h2>
+			<img src="./images/masthead.png" />
 		</header>
 		<hr />
 		<nav class="main">
