Remove old images, update favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Katie M. K. Blaede">
 		<meta name="theme-color" content="#9FDDBD">
 
-		<link rel="icon" type="image/png" href="images/favicon.png" sizes="256x256">
+		<link rel="icon" type="image/png" href="./images/favicon-256.png" sizes="256x256">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" media="all" href="http://cassidyjames.com/grid.css/grid.css">
 		<link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
