--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 		<meta name="author" content="Katie M. K. Blaede">
 		<meta name="theme-color" content="#9FDDBD">
 
-		<link rel="icon" type="image/png" href="./images/favicon-256.png" sizes="256x256">
+		<link href="./images/favicon-256.png" rel="icon" type="image/png" sizes="256x256">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" type="text/css" media="all" href="http://cassidyjames.com/grid.css/grid.css">
-		<link rel="stylesheet" type="text/css" media="all" href="styles/main.css">
+		<link href="http://cassidyjames.com/grid.css/grid.css" rel="stylesheet" type="text/css" media="all">
+		<link href="./styles/main.css" rel="stylesheet" type="text/css" media="all">
 		<title>Katie M. K. Blaede</title>
 	</head>
 
 	<body>
 		<header class="main">
-			<h1><a href="index.html">Katie M. K. Blaede</a></h1>
+			<h1>Katie M. K. Blaede</h1>
 			<h2>Design &amp; Illustration</h2>
-			<img src="./images/masthead.png" />
+			<a href="./">
+				<img src="./images/masthead.png" />
+			</a>
 		</header>
 
 		<nav class="main">
@@ -30,35 +32,35 @@
 
 		<div class="grid thumbs">
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/irish-blessing.png" />
+				<img src="./images/thumbnails/irish-blessing.png" />
 				<span>Irish Blessing</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/disney.png" />
+				<img src="./images/thumbnails/disney.png" />
 				<span>Disney series</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/emma-and-ben-save-the-dates.png" />
+				<img src="./images/thumbnails/emma-and-ben-save-the-dates.png" />
 				<span>Save the Dates for Emma &amp; Ben</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/keebly.png" />
+				<img src="./images/thumbnails/keebly.png" />
 				<span>Keebly Creations</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/odad.png" />
+				<img src="./images/thumbnails/odad.png" />
 				<span>Odad</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/recipe-cards.png" />
+				<img src="./images/thumbnails/recipe-cards.png" />
 				<span>Recipe Cards</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/wedding-invitation-suite.png" />
+				<img src="./images/thumbnails/wedding-invitation-suite.png" />
 				<span>Wedding Invitations Suite</span>
 			</a>
 			<a href="#" class="whole smablet-half large-third">
-				<img src="images/thumbnails/wedding-website.png" />
+				<img src="./images/thumbnails/wedding-website.png" />
 				<span>Wedding Website</span>
 			</a>
 		</div>
