--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<meta name="description" content="Design and illustration portfolio of Katie M. K. Blaede">
 		<meta name="author" content="Katie M. K. Blaede">
-		<meta name="theme-color" content="#9FDDBD">
+		<meta name="theme-color" content="#8dd8cf">
 
 		<link href="./images/favicon-256.png" rel="icon" type="image/png" sizes="256x256">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat|Lora:400,400italic" rel="stylesheet" type="text/css">
@@ -25,8 +25,8 @@
 		</header>
 
 		<nav class="main">
-			<a href="#">Portfolio</a>
-			<a href="#">About</a>
+			<a href="./">Portfolio</a>
+			<a href="./about">About</a>
 			<a href="#">Shop</a>
 		</nav>
 
