--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 			</a>
 		</header>
 
-		<nav class="main">
+		<p style="text-align: center;">Website coming soon!</p>
+
+		<!-- <nav class="main">
 			<a href="./">Portfolio</a>
 			<a href="./about">About</a>
 			<a href="#">Shop</a>
@@ -63,6 +65,6 @@
 				<img src="./images/thumbnails/wedding-website.png" />
 				<span>Wedding Website</span>
 			</a>
-		</div>
+		</div> -->
 	</body>
 </html>
