Add portfolio sample page for Irish Blessing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</nav>
 
 		<div class="grid thumbs">
-			<a href="#" class="whole smablet-half large-third">
+			<a href="./portfolio/irish-blessing" class="whole smablet-half large-third">
 				<img src="./images/thumbnails/irish-blessing.png" />
 				<span>Irish Blessing</span>
 			</a>
