Add contact form, refactor CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: redirect
 title: Portfolio
 permalink: /
-redirect: /12-days-of-cookies
+redirect: /12-days-of-cookies/
 ---
 
 <div class="grid thumbs">
